# bstats-data-processor

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: chart_updater.rs  charts.rs  data_submission.rs  date_util.rs  legacy_data_submission.rs  lib.rs  main.rs  parser.rs  ratelimits.rs  service.rs  software.rs  submit_data_schema.rs  util.rs
src/charts/: advanced_pie.rs  chart.rs  drilldown_pie.rs  simple_map.rs  simple_pie.rs  single_line_chart.rs
src/parser/: bukkit_minecraft_version.rs  bukkit_server_software.rs  bungeecord_version.rs  java_version.rs  name_in_request.rs  os.rs  predefined_value.rs
src/util/: geo_ip.rs  ip_parser.rs  redis.rs
tests/: software_test.rs
tests/bound_redis_client/: mod.rs
tests/integration_tests/: helper.rs  main.rs  test_charts.rs  test_ratelimits.rs  test_service.rs  test_software.rs  test_submit_data.rs
tests/integration_tests/helper/: redis_testcontainer.rs  test_environment.rs
tests/test_environment/: mod.rs
