[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
actix-web = "4"
serde_with = "3.9.0"
mockall = "0.13.0"
regex = "1.10.5"
once_cell = "1.19.0"
redis = { version = "0.25.4", features = ["tokio-comp", "aio"] }
mockall_double = "0.3.1"
redis-test = "0.4.0"
testcontainers = "0.20.1"
tokio = "1.39.1"
