[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
actix-web = "4"
serde_with = "3.9.0"
regex = "1.10.5"
once_cell = "1.19.0"
redis-test = "0.4.0"
tokio = "1.39.1"
chrono = "0.4.38"
maxminddb = "0.17"
deadpool-redis = { version = "0.16", features = ["cluster"] }
# Must be the same version that deadpool-redis uses (https://github.com/bikeshedder/deadpool/blob/master/redis/Cargo.toml) 
redis = { version = "0.26", features = [
    "tokio-comp",
    "aio",
    "cluster",
    "cluster-async",
] }
# Must be the same version that deadpool-redis uses
deadpool = { version = "0.12.0", default-features = false, features = [
    "managed",
] }

[dev-dependencies]
testcontainers = "0.20.1"
